# teaching

./: README.md  pyproject.toml  requirements.txt
exercises/: vector_projections_continuousfunctions.ipynb  vector_projections_euclideanspace.ipynb
interactive/: absolute_value.ipynb  graphing_trig_functions.ipynb  vector_fields.ipynb  vector_projections.ipynb
notebooks/: nd_projections.ipynb
