[project]
name = "teaching"
version = "1.0"
dependencies = [
    "numpy",
]
requires-python = "~=3.12"
authors = [{name = "Jesus Perez Cuarenta", email = "jesus.perezcuarenta@swccd.edu"}]
description = "Examples and exercises for teaching mathematics"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }